# EU4DLL

./: .clang-format  .gitignore  README.md  README_zh-CN.md
.github/workflows/: build.yml
OldSrc/Plugin64/: byte_pattern.cpp  plugin_64.h  tooltip_and_button.cpp
Plugin64/: localization.cpp  tooltip_and_button_asm.asm  version.cpp
src/: CMakeLists.txt  CMakePresets.json  generate_version.cmake
src/loader/: CMakeLists.txt  dllmain.cpp  version_exports.def
src/plugin/: CMakeLists.txt  byte_pattern.cpp  byte_pattern.h  dllmain.cpp  escape_tool.cpp  escape_tool.h  iat_hook.h  injector.h  options.cpp  plugin64.h  plugin_64.h  validator.cpp  version_detect.cpp
src/plugin/hooks/: c_bitmap_font.cpp  c_bitmap_font_asm.S  date.cpp  date_asm.S  event_dialog.cpp  event_dialog_asm.S  file_read.cpp  file_save.cpp  file_save_asm.S  font.cpp  font_asm.S  ime.cpp  ime_asm.S  input.cpp  input_asm.S  list_field_adjustment.cpp  list_field_adjustment_asm.S  localization.cpp  localization_asm.S  main_text.cpp  main_text_asm.S  map_adjustment.cpp  map_adjustment_asm.S  map_justify.cpp  map_justify_asm.S  map_nudge_view.cpp  map_nudge_view_asm.S  map_popup.cpp  map_popup_asm.S  map_view.cpp  map_view_asm.S  steam_rich_presence.cpp  tooltip_and_button.cpp  tooltip_and_button_asm.S
src/resource/: plugin.ini
src/toolchain/: mingw-w64-x86_64.cmake
